# Global-Ilumination-Surfels

./: .gitignore  CMakeLists.txt
resources/models/: 1 - Hojas.fbx  10 - Detalles ventanas.fbx  11 - Columnas B.fbx  12 - Lanzas.fbx  13 - Tela verde.fbx  14 - Tela azul.fbx  15 - Tela roja.fbx  16 - Tela azul escudo.fbx  17 - Tela roja escudo.fbx  18 - Tela verde escudo.fbx  19 - Cadenas.fbx  2 - Tiestos.fbx  20 - Candelabros.fbx  3 - Adornos leon.fbx  4 - Paredes.fbx  5 - Arcos y adornos.fbx  6 - Bovedas.fbx  7 - Columnas A.fbx  8 - Suelo.fbx  9 - Columnas C.fbx
resources/shaders/: bitwise.glsl  compile.bat  indirect_diffuse_shading.frag  shader.frag  shader.vert  shader_raytracing.frag  shader_raytracing.vert  shadow_ssao_composition.frag  shadowmapping_shader.vert  ssao_blur.frag  ssao_composition.frag  ssao_fullscreen.vert  ssao_gBuffer.frag  ssao_gBuffer.vert  ssao_gBuffer_specular.frag  ssao_generation.frag  surfel_generation.comp  surfel_radiance_calculation.comp  surfel_radiance_visualization.vert  surfel_visualization.frag  surfel_visualization.geom.glsl  surfel_visualization.vert  surfelsData.glsl  surfels_composition.frag  surfels_composition_visualization.frag
src/: BufferCreator.h  Config.h  RenderApplication.cpp  RenderApplication.h  TriangleApplication.h  UniformBuffer.h  VertexBuffer.h  main.cpp
src/Buffers/: GUniformBufferManager.cpp  GUniformBufferManager.h  GeometryUniformBuffer.cpp  GeometryUniformBuffer.h  RaytracingUniformBuffer.cpp  RaytracingUniformBuffer.h  SSAOBufferManager.cpp  SSAOBufferManager.h  ShadowMappingUniformBuffer.cpp  ShadowMappingUniformBuffer.h  ShadowSSAOCompositionUniformBuffer.cpp  ShadowSSAOCompositionUniformBuffer.h  SurfelsBufferManager.cpp  SurfelsBufferManager.h  UniformBuffersManager.cpp  UniformBuffersManager.h
src/Camera/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h
src/Descriptors/: DescriptorsManager.cpp  DescriptorsManager.h  GBufferDescriptors.cpp  GBufferDescriptors.h  GeometryDescriptors.cpp  GeometryDescriptors.h  IndirectDiffuseShadingDescriptors.cpp  IndirectDiffuseShadingDescriptors.h  PipelineDescriptors.h  RaytracingDescriptors.cpp  RaytracingDescriptors.h  SSAOBlurDescriptors.cpp  SSAOBlurDescriptors.h  SSAOCompositionDescriptors.cpp  SSAOCompositionDescriptors.h  SSAODescriptors.cpp  SSAODescriptors.h  ShadowMappingDescriptors.cpp  ShadowMappingDescriptors.h  ShadowsSSAOCompositionDescriptors.cpp  ShadowsSSAOCompositionDescriptors.h  SurfelsCompositionDescriptors.cpp  SurfelsCompositionDescriptors.h  SurfelsGenerationDescriptors.cpp  SurfelsGenerationDescriptors.h  SurfelsRadianceCalculationDescriptors.cpp  SurfelsRadianceCalculationDescriptors.h  SurfelsVisualizationDescriptors.cpp  SurfelsVisualizationDescriptors.h
src/Images/: ImageCreator.cpp  ImageCreator.h
src/Initializers/: CommandManager.cpp  CommandManager.h  SwapChainManager.cpp  SwapChainManager.h  SynchronizacionObjects.cpp  SynchronizationObjects.h  VulkanDeviceCreator.cpp  VulkanDeviceCreator.h  VulkanInitializer.cpp  VulkanInitializer.h  WindowManager.cpp  WindowManager.h
src/Pipelines/: ComputePipeline.cpp  ComputePipeline.h  GBufferPipeline.cpp  GBufferPipeline.h  GeometryPipeline.cpp  GeometryPipeline.h  GraphicsPipeline.cpp  GraphicsPipeline.h  IndirectDiffuseShadingPipeline.cpp  IndirectDiffuseShadingPipeline.h  PipelineManager.cpp  PipelineManager.h  RaytracingPipeline.cpp  RaytracingPipeline.h  RenderPipeline.h  SSAOBlurPipeline.cpp  SSAOBlurPipeline.h  SSAOCompositionPipeline.cpp  SSAOCompositionPipeline.h  SSAOPipeline.cpp  SSAOPipeline.h  ShadowMappingPipeline.cpp  ShadowMappingPipeline.h  SurfelsCompositionPipeline.cpp  SurfelsCompositionPipeline.h  SurfelsGenerationPipeline.cpp  SurfelsGenerationPipeline.h  SurfelsRadianceCalculationPipeline.cpp  SurfelsRadianceCalculationPipeline.h  SurfelsVisualizationPipeline.cpp  SurfelsVisualizationPipeline.h
src/Raytracing/: RaytracingManager.cpp  RaytracingManager.h
src/Render_Passes/: GBufferPass.cpp  GBufferPass.h  GeometryPass.cpp  GeometryPass.h  IndirectDiffusePass.cpp  IndirectDiffusePass.h  RaytracingPass.cpp  RaytracingPass.h  RenderPass.cpp  RenderPass.h  RenderPassesManager.cpp  RenderPassesManager.h  SSAOBlurPass.cpp  SSAOBlurPass.h  SSAOCompositionPass.cpp  SSAOCompositionPass.h  SSAOPass.cpp  SSAOPass.h  ShadowMappingPass.cpp  ShadowMappingPass.h  SurfelsVisualizationPass.cpp  SurfelsVisualizationPass.h
src/Scene/: MaterialsManager.cpp  SceneManager.h  (+3 more)
(+22 files in other folders)
